--- a/Notebooks/Nile_University.ipynb
+++ b/Notebooks/Nile_University.ipynb
@@ -393,7 +393,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "id": "nS0xc-M3U9dH"
       },
@@ -448,7 +448,7 @@
         "FEATURE_COLS  = [c for c in df.columns if c not in [SENSITIVE_COL, TARGET_COL]]\n",
         "\n"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -832,7 +832,7 @@
         "id": "4ECNGy79VJm3",
         "outputId": "aa948771-da51-4278-e0b1-f65b8dcbdb5c"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1191,7 +1191,7 @@
         "plt.ylabel('Hire Probability')\n",
         "plt.show()"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1230,9 +1230,7 @@
       "cell_type": "markdown",
       "source": [
         "## Fairness Metric Suite\n",
-        "Calculates the three IEEE-recommended group fairness gaps  \n",
-        "\n",
-        "(♂ minus ♀):  \n",
+        "Calculates the three IEEE-recommended group fairness gaps :  \n",
         "\n",
         "\n",
         "| Metric | Formula | Intuition |\n",
@@ -1281,7 +1279,7 @@
         "\n",
         "gaps_base = fairness_block(\"BASELINE\", y_test, y_pred_base, s_test)"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1369,19 +1367,16 @@
         "    print(f\"\\n{'='*60}\\nCase {idx} | Pred: {pred_lbl} | True: {true_lbl}\")\n",
         "    shap_val = explainer(X_test_proc[idx:idx+1])\n",
         "    df_contrib = (\n",
-        "        pd.DataFrame({\"Feature\": feature_names, \"SHAP\": shap_val.values[0]})\n",
-        "          .assign(abs=lambda d: d[\"SHAP\"].abs())\n",
-        "          .sort_values(\"abs\", ascending=False)\n",
-        "          .head(10)\n",
-        "          .drop(columns=\"abs\")\n",
+        "        pd.DataFrame({\"Feature\": feature_names, \"SHAP\": shap_val.values[0]}).assign(abs=lambda d: d[\"SHAP\"].abs()).sort_values(\"abs\", ascending=False).head(10).drop(columns=\"abs\")\n",
         "    )\n",
+        "\n",
         "    display(df_contrib)\n",
         "    shap.plots.bar(shap_val[0], max_display=10)\n",
         "\n",
         "for i in example_idxs:\n",
         "    explain_idx(i)\n"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3086,22 +3081,21 @@
         "w_balanced = s_train.map({g: N/(2*c) for g,c in group_counts.items()})\n",
         "lambdas = np.linspace(0,1,11)\n",
         "records=[]\n",
+        "\n",
         "for lam in lambdas:\n",
         "    w_lam = (1-lam)*1 + lam*w_balanced\n",
         "    model = Pipeline([\n",
         "        (\"prep\", numeric_processor),\n",
         "        (\"clf\", LogisticRegression(max_iter=1200, random_state=SEED))\n",
         "    ])\n",
+        "\n",
         "    model.fit(X_train, y_train, clf__sample_weight=w_lam)\n",
         "    y_hat = model.predict(X_test)\n",
         "    acc   = accuracy_score(y_test, y_hat)\n",
-        "    records.append([lam, acc,\n",
-        "                    demographic_parity(y_hat,s_test),\n",
-        "                    equal_opportunity(y_test,y_hat,s_test),\n",
-        "                    avg_odds(y_test,y_hat,s_test)])\n",
+        "    records.append([lam, acc,demographic_parity(y_hat,s_test),equal_opportunity(y_test,y_hat,s_test),avg_odds(y_test,y_hat,s_test)])\n",
+        "\n",
         "df_sweep = pd.DataFrame(records, columns=[\"λ\",\"Acc\",\"DP\",\"EO\",\"AO\"])\n",
-        "display(df_sweep.style.format({\"Acc\":\"{:.3f}\",\"DP\":\"{:+.3f}\",\n",
-        "                               \"EO\":\"{:+.3f}\",\"AO\":\"{:+.3f}\"}))\n",
+        "display(df_sweep.style.format({\"Acc\":\"{:.3f}\",\"DP\":\"{:+.3f}\", \"EO\":\"{:+.3f}\",\"AO\":\"{:+.3f}\"}))\n",
         "\n",
         "\n",
         "candidates = df_sweep[df_sweep[\"EO\"].abs()<=0.05]\n",
@@ -3120,16 +3114,18 @@
         "    (\"prep\", numeric_processor),\n",
         "    (\"clf\",  LogisticRegression(max_iter=1200, random_state=SEED))\n",
         "])\n",
+        "\n",
         "fair_model.fit(X_train, y_train, clf__sample_weight=w_final)\n",
         "y_fair = fair_model.predict(X_test)\n",
         "proba_fair = fair_model.predict_proba(X_test)[:,1]\n",
         "gaps_fair = fairness_block(\"RE-WEIGHED\", y_test, y_fair, s_test)\n",
         "acc_fair  = accuracy_score(y_test, y_fair)\n",
+        "\n",
         "print(f\"\\nAccuracy | Baseline: {acc_base:.3f}  →  Re-weighed: {acc_fair:.3f}\")\n",
         "\n",
         "\n"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3270,7 +3266,7 @@
         "##  Fairness Gap Reduction Visual\n",
         "Bar chart of Demographic Parity, Equal Opportunity, and Average Odds  \n",
         "**before** vs. **after** mitigation.  \n",
-        "Zero line marks perfect parity; narrower bars = fairer model.\n"
+        "\n"
       ],
       "metadata": {
         "id": "JkX-uCTVeR_R"
@@ -3303,7 +3299,7 @@
         "    ax.text(i, v+0.01, f\"{v:.3f}\", ha=\"center\", fontweight=\"bold\")\n",
         "plt.show()"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
